--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-15  David Schleef  <ds@schleef.org>
+
+	* gst/videotestsrc/videotestsrc.c: (paint_hline_I420): Fix I420
+	painting that ends in an odd column (bug #300471)
+
 2005-06-15  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* ext/cdio/cddasrc.c: (cddasrc_uri_set_uri):
