ext/alsa/: Simplistically attempt to pick a default format for filling with silence if we receive a FILLER event befo...
Original commit message from CVS:
* ext/alsa/gstalsa.c: (gst_alsa_set_default_format):
* ext/alsa/gstalsa.h:
* ext/alsa/gstalsasink.c: (gst_alsa_sink_check_event):
Simplistically attempt to pick a default format for filling
with silence if we receive a FILLER event before the caps are
negotiated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-06-20  Jan Schmidt  <thaytan@mad.scientist.com>
+	* ext/alsa/gstalsa.c: (gst_alsa_set_default_format):
+	* ext/alsa/gstalsa.h:
+	* ext/alsa/gstalsasink.c: (gst_alsa_sink_check_event):
+	  Simplistically attempt to pick a default format for filling
+	  with silence if we receive a FILLER event before the caps are
+	  negotiated.
+
 2005-06-19  Paolo Borelli  <pborelli@katamail.com>
 
 	Reviewed by: Luca Ognibene <luogni@tin.it>
