--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-06-22  Michael Benes  <michael dot benes at xeris dot cz>
+
+	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream):
+	  Initialize the video context properly, so we don't get random
+	  aspect ratios when no aspect ratio is set (#308644).
+
 2005-06-21  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* ext/theora/theoraenc.c: (_ilog), (gst_theora_enc_init),
