--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-23  Antoine Tremblay  <hexa00 at gmail dot com>
+
+	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/auparse/gstauparse.c: (gst_auparse_chain):
+	  Don't leak caps (#308794).
+
 2005-06-23  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst/audioscale/gstaudioscale.c: (gst_audioscale_get_buffer),
