gst/audiorate/gstaudiorate.c: Make gcc4 happy.
Original commit message from CVS:
* gst/audiorate/gstaudiorate.c: (gst_audiorate_chain_handle_event):
Make gcc4 happy.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-23  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/audiorate/gstaudiorate.c: (gst_audiorate_chain_handle_event):
+	  Make gcc4 happy.
+
 2005-06-23  Antoine Tremblay  <hexa00 at gmail dot com>
 
 	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>
