--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* ext/libpng/gstpngdec.c:
+	fix stupid caps, pngdec decodes to RGB not BGR
+
 2005-06-24  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* ext/vorbis/vorbisenc.c: (gst_vorbisenc_buffer_from_packet),
