--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-07-02  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/audioconvert/gstchannelmix.c:
+	(gst_audio_convert_fill_normalize):
+	  Fix crack-leftovers in volume normalization that caused audible
+	  output volume to be inverse-logarithmically related to the number
+	  of channels of the input. Also add some docs on what this function
+	  actually is supposed to do.
+
 2005-07-02  Josef Zlomek  <josef.zlomek@xeris.cz>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
