--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-07-11  jonathan@kaolin.hn.org
+
+	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/gnomevfs/gstgnomevfs.c: (plugin_init):
+	* ext/gnomevfs/gstgnomevfssink.c:
+	* ext/gnomevfs/gstgnomevfssrc.c:
+	  Add debug category (#309524).
+
 2005-07-11  Thomas Zajic  <zlatko@gmx.at>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
